...
            app:destination="@id/createFilterFragment" />
        <action
            android:id="@+id/startDetailsFilterFragment"
            app:destination="@id/detailsFilterFragment" />
        <action
            android:id="@+id/startNumberDataFilteringDialog"
            app:destination="@id/numberDataFilteringDialog" />
        <action
            android:id="@+id/startFilterActionDialog"
            app:destination="@id/filterActionDialog" />
        <action
            android:id="@+id/startInfoFragment"
            app:destination="@id/infoFragment" />
    </fragment>

    <fragment
        android:id="@+id/listPermissionFragment"
        android:name="com.tarasovvp.smartblocker.presentation.main.number.list.listfilter.ListPermissionFragment"
        android:label="@string/list_permission">
...
            android:name="filterWithFilteredNumberUIModel"
            android:defaultValue="@null"
            app:argType="com.tarasovvp.smartblocker.presentation.uimodels.FilterWithFilteredNumberUIModel"
            app:nullable="true" />
        <action
            android:id="@+id/startDetailsNumberDataFragment"
            app:destination="@id/detailsNumberDataFragment" />
        <action
            android:id="@+id/startFilterActionDialog"
            app:destination="@id/filterActionDialog" />
        <action
            android:id="@+id/startListBlockerFragment"
            app:destination="@id/listBlockerFragment"
...
        <action
            android:id="@+id/startInfoFragment"
            app:destination="@id/infoFragment" />
    </fragment>

    <fragment
        android:id="@+id/listContactFragment"
        android:name="com.tarasovvp.smartblocker.presentation.main.number.list.listcontact.ListContactFragment"
        android:label="@string/list_contact">
        <action
            android:id="@+id/startDetailsNumberDataFragment"
            app:destination="@id/detailsNumberDataFragment" />
        <action
...
