...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        android:paddingVertical="@dimen/padding_8">

        <TextView
            android:id="@+id/empty_state_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/padding_8"
            android:paddingHorizontal="@dimen/padding_16"
            android:background="@drawable/bg_rounded"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintTop_toBottomOf="@+id/empty_state_description" />

        <ImageView
            android:id="@+id/empty_state_icon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_0"
            android:layout_marginTop="@dimen/margin_8"
            android:padding="@dimen/padding_16"
            android:src="@drawable/ic_empty_state"
            android:scaleType="fitCenter"
...
